# Bonsai

./: .gitignore  Cargo.toml  README.md  bonsai.h  build.rs
.github/workflows/: ci.yml
benches/: adaptation_convergence.rs  bloom_cache_impact.rs  datasets.rs  hilbert_vs_natural.rs  insert_throughput.rs  knn_latency.rs  migration_cost.rs  range_query_latency.rs
cli/src/: main.rs
examples/: demo_bloom.rs  demo_bonsai.rs  demo_bonsai_log.txt  demo_hilbert.rs  demo_quadtree.rs  demo_types.rs  wasm_demo.js
proptest-regressions/: bloom.txt  migration.txt
proptest-regressions/backends/: kdtree.txt
proptest-regressions/profiler/: policy.txt  reservoir.txt
src/: bloom.rs  ffi.rs  hilbert.rs  index.rs  lib.rs  migration.rs  router.rs  ser.rs  stats.rs  types.rs  wasm.rs
src/backends/: grid.rs  kdtree.rs  mod.rs  quadtree.rs  rtree.rs
src/profiler/: cost_model.rs  mod.rs  policy.rs  reservoir.rs  stats.rs
tests/: adaptive_switching.rs
