[package]
name = "bonsai"
version = "0.1.0"
edition = "2021"
description = "A zero-dependency, embeddable, self-tuning spatial index for Rust"
license = "MIT"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
serde   = ["dep:serde", "dep:bincode"]
wasm    = ["dep:wasm-bindgen"]
ffi     = []
full    = ["serde", "wasm", "ffi"]

[dependencies]
serde        = { version = "1", features = ["derive"], optional = true }
bincode      = { version = "1", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[[bin]]
name = "bonsai"
path = "cli/src/main.rs"
required-features = ["serde"]

[build-dependencies]

[dev-dependencies]
proptest = { version = "1.4.0", default-features = false, features = ["std", "bit-set"] }
loom      = "0.7"
criterion = { version = "0.4", features = ["html_reports"] }
rayon     = "1.10"

[[bench]]
name = "insert_throughput"
harness = false

[[bench]]
name = "range_query_latency"
harness = false

[[bench]]
name = "knn_latency"
harness = false

[[bench]]
name = "migration_cost"
harness = false

[[bench]]
name = "bloom_cache_impact"
harness = false

[[bench]]
name = "hilbert_vs_natural"
harness = false

[[bench]]
name = "adaptation_convergence"
harness = false
